--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@tinymce/tinymce-vue": "^5.0.0",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
     "querystring": "^0.2.1",
+    "tinymce": "^6.2.0",
     "vue": "^3.4.21",
     "vue-i18n": "^10.0.0-beta.1",
     "vue-router": "^4.3.0"
