文件上传接口的实现以及界面上传文件功能实现

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-plus": "^2.7.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/mysql": "^2.15.26",
     "@vitejs/plugin-vue": "^5.0.4",
     "unplugin-auto-import": "^0.17.6",
