--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "tinymce": "^6.2.0",
     "vue": "^3.4.21",
     "vue-i18n": "^10.0.0-beta.1",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-pdfjs": "^0.1.6"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
